--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <main class="container">
         <article class="profile-card">
             <header class="profile-header">
-                <img src="profile.jpg" alt="Profile Picture of Ujwal Patil" class="profile-img">
+                <img src="Profile.jpg" alt="Profile Picture of Ujwal Patil" class="profile-img">
                 <h1>Ujwal Patil</h1>
                 <p class="designation">Software Developer</p>
             </header>
